--- a/style.css
+++ b/style.css
@@ -21,6 +21,18 @@ body {
 
 .stats-container {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+}
+
+.stats-container:hover {
+    box-shadow: 0 0 30px lightblue;
+}
+
+.flexbox { 
+    display: flex;
+    align-items: center;
 }
 
 .stats-card {
